<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:viewBindingIgnore="true"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/gray_light_divider_line"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/control_start_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/start_button"/>

        <android.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/control_stop_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/stop_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/take_photo_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/take_photo_button"/>

        <android.widget.Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/record_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/record_button" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/control_log_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/uxsdk_focal_zoom_slider_plus_unclick"
            android:layout_margin="16dp"
            />


    </FrameLayout>


</LinearLayout>